--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-<link rel="shortcut icon" href="s.png" type="image/x-icon" />
+<link rel="shortcut icon" href="http://ns3.dnsinweb.com/~zuxferco/iamsurya/s.png" type="image/x-icon" />
 
   <title>Surya Teja</title>
 
@@ -10,12 +10,12 @@
 
 </head>
 <body>	<div id="box">
-		<img src="me2.png" />
+		<img src="http://ns3.dnsinweb.com/~zuxferco/iamsurya/me2.png" />
 		<h1>Surya Teja<h1>
 		<h2>builds products for fun <span class="amp">&amp;</span> profit</h2>
-		<h2><a href="http://twitter.com/stp2410" id="twitter"><img style="display:inline;" src="twitter.png" /></a>
-<a href="http://www.linkedin.com/profile/view?id=40575246" id="twitter"><img style="display:inline;" src="linkedin.png" /></a>
-<a href="http://www.quora.com/Suryateja-Punukollu" id="twitter"><img style="display:inline;" src="quora.png" /></a></h2>
+		<h2><a href="http://twitter.com/stp2410" id="twitter"><img style="display:inline;" src="http://ns3.dnsinweb.com/~zuxferco/iamsurya/twitter.png" /></a>
+<a href="http://www.linkedin.com/profile/view?id=40575246" id="twitter"><img style="display:inline;" src="http://ns3.dnsinweb.com/~zuxferco/iamsurya/linkedin.png" /></a>
+<a href="http://www.quora.com/Suryateja-Punukollu" id="twitter"><img style="display:inline;" src="http://ns3.dnsinweb.com/~zuxferco/iamsurya/quora.png" /></a></h2>
 	</div>
 </body>
 </html>
