--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 		<img src="http://ns3.dnsinweb.com/~zuxferco/iamsurya/me2.png" />
 		<h1>Surya Teja<h1>
 		<h2>builds products for fun <span class="amp">&amp;</span> profit</h2>
-		<h2><a href="http://twitter.com/stp2410" id="twitter"><img style="display:inline;" src="http://ns3.dnsinweb.com/~zuxferco/iamsurya/twitter.png" /></a>
+		<h2>
+		<a href="http://www.quora.com/Suryateja-Punukollu" id="twitter"><img style="display:inline;" src="http://i.imgur.com/HfWhsz8.png" /></a>
+		<a href="http://twitter.com/stp2410" id="twitter"><img style="display:inline;" src="http://ns3.dnsinweb.com/~zuxferco/iamsurya/twitter.png" /></a>
 <a href="http://www.linkedin.com/profile/view?id=40575246" id="twitter"><img style="display:inline;" src="http://ns3.dnsinweb.com/~zuxferco/iamsurya/linkedin.png" /></a>
 <a href="http://www.quora.com/Suryateja-Punukollu" id="twitter"><img style="display:inline;" src="http://ns3.dnsinweb.com/~zuxferco/iamsurya/quora.png" /></a></h2>
 	</div>
